--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ openai = "^1.35.14"
 requests = "^2.32.3"
 markdown = "^3.6"
 beautifulsoup4 = "^4.12.3"
+matplotlib = "^3.8.3"
 # langchain = "^0.2.9"
 
 [tool.pyright]
