--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ requests = "^2.32.3"
 markdown = "^3.6"
 beautifulsoup4 = "^4.12.3"
 matplotlib = "^3.8.3"
+streamlit-geolocation = "^0.0.10" 
 # langchain = "^0.2.9"
 
 [tool.pyright]
