--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ markdown = "^3.6"
 beautifulsoup4 = "^4.12.3"
 matplotlib = "^3.8.3"
 streamlit-geolocation = "^0.0.10" 
+# SQLite = "^3.36.0"
 SQLAlchemy = "^1.4.0"
 # langchain = "^0.2.9"
 
